test/Runner/errors/tests/MI/TestSuite/Prepare3.runtime.js
mi("Suite", () => {
	suite("Suite", () => {}, "foo")
});